[package]
name = "bk"
version = "0.1.0"
authors = ["Heng-Yi Wu <2316687+henry40408@users.noreply.github.com>"]
edition = "2018"
description = "Bookmark or bucket service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
failure = "0.1"
headless_chrome = { git = "https://github.com/atroche/rust-headless-chrome", rev = "7a7e2ac" }
