[package]
name = "cdu"
version = "1.0.0"
authors = ["Heng-Yi Wu <2316687+henry40408@users.noreply.github.com>"]
edition = "2021"
description = "Cloudflare DNS record update"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false }
cloudflare = { version = "0.8", default-features = false, features = ["rustls-tls"] }
cron = "0.9"
env_logger = "0.9"
futures = "0.3"
log = "0.4"
public-ip = { version = "0.2", default-features = false, features = ["opendns", "tokio-dns-resolver"] }
structopt = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tokio-retry = "0.3"
ttl_cache = "0.5"
