[package]
name = "cdu"
version = "1.1.8"
authors = ["Heng-Yi Wu <2316687+henry40408@users.noreply.github.com>"]
edition = "2021"
description = "Cloudflare DNS record update"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false }
clap = { version = "3", default-features = false, features = ["derive", "env", "std"] }
cloudflare = { version = "0.9.1", default-features = false } # use API response structs only
cron = "0.11"
derivative = "2.2" # avoid cache in struct being serialized by debug trait
env_logger = "0.9"
exponential-backoff = "1.1"
futures = "0.3"
log = "0.4"
logging_timer = "1"
public-ip = { version = "0.2", default-features = false, features = ["opendns", "tokio-dns-resolver"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
ttl_cache = "0.5"
ureq = { version = "2", features = ["json"] }
