[package]
name = "cdu"
version = "0.1.0"
authors = ["Heng-Yi Wu <2316687+henry40408@users.noreply.github.com>"]
edition = "2021"
description = "Cloudflare DNS record update"
rust-version = "1.58"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false }
clap = { version = "4", default-features = false, features = [
  "derive",
  "env",
  "help",
  "std",
] }
cloudflare = { version = "0.9.1", default-features = false } # use API response structs only
cron = "0.12"
pretty_env_logger = "0.4"
exponential-backoff = "1.1"
futures = "0.3"
log = "0.4"
logging_timer = "1"
moka = { version = "0.9", default-features = false, features = ["sync"] }
public-ip = { version = "0.2", default-features = false, features = [
  "ipify-org",
  "tokio-http-resolver",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
mockito = "0.31"
