[package]
name = "comics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "3", default-features = false, features = [
  "derive",
  "env",
  "std",
] }
log = "0.4"
pretty_env_logger = "0.4"
warp = { version = "0.3", default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
