[package]
name = "comics"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
askama = "0.11"
chrono = "0.4"
clap = { version = "4", default-features = false, features = [
  "derive",
  "env",
  "help",
  "std",
] }
log = "0.4"
pathdiff = "0.2"
pretty_env_logger = "0.4"
warp = { version = "0.3", default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
urlencoding = "2"
