[package]
name = "hcc"
version = "0.1.0"
authors = ["Heng-Yi Wu <2316687+henry40408@users.noreply.github.com>"]
edition = "2021"
description = "HTTPS Certificate Check"
rust-version = "1.58"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", default-features = false, features = [
  "derive",
  "env",
  "help",
  "std",
] }
cron = "0.12"
futures = "0.3"
log = "0.4"
num-format = "0.4"
once_cell = "1.16"
pretty_env_logger = "0.4"
pushover = { path = "../pushover/pushover" }
rustls = { version = "0.20", default-features = false, features = ["tls12"] }
supports-unicode = "1.0"
tokio = { version = "1", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "time",
] }
webpki = "0.22"
webpki-roots = "0.22"
x509-parser = "0.14"
