[package]
name = "pop"
version = "0.1.1"
authors = ["Heng-Yi Wu <2316687+henry40408@users.noreply.github.com>"]
edition = "2018"
description = "Pop is proxy server to Pushover with attachment support"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
log = "0.4"
env_logger = "0.9"
pushover = { path = "../pushover/pushover" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
tokio = { version = "1", features = [] }
warp = "0.3"

[dev-dependencies]
mockito = "0.30.0"
