[package]
name = "hcc"
version = "0.1.0"
authors = ["Heng-Yi Wu <2316687+henry40408@users.noreply.github.com>"]
edition = "2018"
description = "HTTPS Certificate Check"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
futures = "0.3"
num-format = "0.4"
rustls = { version = "0.19", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
structopt = "0.3"
tokio = { version = "1", features = ["macros", "rt"] }
webpki = "0.21"
webpki-roots = "0.21"
x509-parser = "0.9"
