[package]
name = "hcc"
version = "1.0.1"
authors = ["Heng-Yi Wu <2316687+henry40408@users.noreply.github.com>"]
edition = "2018"
description = "HTTPS Certificate Check"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
futures = "0.3"
num-format = "0.4"
rustls = { version = "0.20", default-features = false, features = ["tls12"] }
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
structopt = "0.3"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
webpki = "0.22"
webpki-roots = "0.22"
x509-parser = "0.12"
