[package]
name = "hcc"
version = "3.0.4"
authors = ["Heng-Yi Wu <2316687+henry40408@users.noreply.github.com>"]
edition = "2021"
description = "HTTPS Certificate Check"
rust-version = "1.58"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "3", default-features = false, features = ["derive", "env", "std"] }
futures = "0.3"
num-format = "0.4"
rustls = { version = "0.20", default-features = false, features = ["tls12"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
webpki = "0.22"
webpki-roots = "0.22"
x509-parser = "0.14"
