[package]
name = "hcc-pushover"
version = "0.1.1"
authors = ["Heng-Yi Wu <2316687+henry40408@users.noreply.github.com>"]
edition = "2018"
description = "Daemon to send check result to Pushover"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
chrono = { version = "0.4.19", default-features = false, features = ["clock"] }
cron = "0.9.0"
log = "0.4.14"
futures = { version = "0.3.15", default-features = false }
hcc = { path = "../core" }
pretty_env_logger = "0.4.0"
reqwest = { version = "0.11.3", default-features = false, features = ["rustls-tls"] }
structopt = "0.3.21"
tokio = { version = "1", features = ["rt-multi-thread", "signal", "time"] }
