[package]
name = "hcc-pushover"
version = "0.1.11"
authors = ["Heng-Yi Wu <2316687+henry40408@users.noreply.github.com>"]
edition = "2021"
description = "Daemon to send check result to Pushover"
rust-version = "1.58"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "3", default-features = false, features = [
  "derive",
  "env",
  "std",
] }
cron = "0.12"
env_logger = "0.9"
log = "0.4"
logging_timer = "1"
futures = { version = "0.3", default-features = false }
hcc = { path = "../core" }
pushover = { path = "../../pushover/pushover" }
tokio = { version = "1", features = ["rt-multi-thread", "signal", "time"] }
