[package]
name = "hcc-server"
version = "0.2.0"
authors = ["Heng-Yi Wu <2316687+henry40408@users.noreply.github.com>"]
edition = "2018"
description = "Server to check HTTPS Certificate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
env_logger = "0.9"
log = "0.4"
hcc = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
structopt = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "signal", "sync"] }
warp = "0.3"
