[package]
name = "pop"
version = "0.1.0"
authors = ["Heng-Yi Wu <2316687+henry40408@users.noreply.github.com>"]
edition = "2018"
description = "PushOver Proxy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
atty = "0.2.14"
infer = "0.5.0"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
structopt = "0.3.22"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
mockito = "0.30.0"
