[package]
name = "po"
version = "0.1.3"
edition = "2021"
description = "Po is a command line application to send notifications to Pushover"
authors = ["Heng-Yi Wu <2316687+henry40408@users.noreply.github.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
pushover = { path = "../pushover" }
structopt = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
