[package]
name = "po"
version = "0.1.5"
edition = "2021"
description = "Po is a command line application to send notifications to Pushover"
authors = ["Heng-Yi Wu <2316687+henry40408@users.noreply.github.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "3", default-features = false, features = ["derive", "env", "std"] }
env_logger = "0.9"
log = "0.4"
logging_timer = "1"
pushover = { path = "../pushover" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
