[package]
name = "pushover"
version = "2.0.6"
edition = "2021"
description = "Pushover is Pushover API wrapper with attachment support in Rust 2021 edition"
authors = ["Heng-Yi Wu <2316687+henry40408@users.noreply.github.com>"]
rust-version = "1.58"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ammonia = "3"
infer = "0.9"
log = "0.4"
maplit = "1" # for ammonia
mime = "0.3"
multipart = { version = "0.18", default-features = false, features = [
  "client",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.24", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["macros"] }
ureq = "2"
url = "2.2"

[dev-dependencies]
mockito = "0.31"
